--- a/src/index.css
+++ b/src/index.css
@@ -50,11 +50,11 @@
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
 
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 220, 6.9%, 21.2%;
     --secondary-foreground: 210 40% 98%;
 
     --muted: 220, 6.9%, 21.2%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted-foreground: 228, 3.4%, 63.9%;
 
     --accent: 220, 6.9%, 21.2%;
     --accent-foreground: 210 40% 98%;
